Fixes No tweets error and word break in twitter feed

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -1409,10 +1409,6 @@ a {
   }
 }
 
-#tweet {
-  word-break: break-all;
-}
-
 @media screen and (max-width : 600px) {
   .tweets-feed {
     font-size : 1em;
